--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="label_nickname">닉네임</string>
     <string name="hint_profile_nickname_text">닉네임을 입력해요</string>
     <string name="label_profile_complete_button">시작해요</string>
+    <string name="label_home">홈</string>
 </resources>
