--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="hint_profile_nickname_text">닉네임을 입력해요</string>
     <string name="label_profile_complete_button">시작해요</string>
     <string name="label_home">홈</string>
+    <string name="description_add_lost_item_button">분실물 작성 버튼</string>
 </resources>
