--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,11 @@
     <string name="label_profile_complete_button">시작해요</string>
     <string name="label_home">홈</string>
     <string name="description_add_lost_item_button">분실물 작성 버튼</string>
+    <string name="description_lost_detail_image">분실물 상세 사진</string>
+    <string name="label_lost_location">분실위치</string>
+    <string name="label_lost_description">설명 글</string>
+    <string name="label_lost_date">분실 날짜</string>
+    <string name="label_start_talk_button">대화해요</string>
+    <string name="description_lost_item_bookmark">즐겨찾기</string>
+    <string name="label_lost_item_reward">사례금</string>
 </resources>
