move: 패키지 분리

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,6 @@
     <string name="hint_find_location">위치 찾기</string>
     <string name="label_reward_price">₩ 0</string>
     <string name="label_register_item_button">등록해요</string>
+    <string name="description_my_location">현재 위치 등록</string>
+    <string name="description_register_image">이미지 추가</string>
 </resources>
