feat: 네이버 지도 연결 및 화면 가운데 마커 표시및 좌표 반환 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="label_register_item_button">등록해요</string>
     <string name="description_my_location">현재 위치 등록</string>
     <string name="description_register_image">이미지 추가</string>
+    <string name="label_register_location_button">위치 등록하기</string>
 </resources>
