--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,7 @@
     <string name="description_my_location">현재 위치 등록</string>
     <string name="description_register_image">이미지 추가</string>
     <string name="label_register_location_button">위치 등록하기</string>
+    <string name="label_location_title">선택한 곳의 장소명을 입력해주세요.</string>
+    <string name="hint_location_title">예) 시청 앞 사거리</string>
+    <string name="label_location_position_submit_button">장소 등록</string>
 </resources>
