--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="label_location_title">선택한 곳의 장소명을 입력해주세요.</string>
     <string name="hint_location_title">예) 시청 앞 사거리</string>
     <string name="label_location_position_submit_button">장소 등록</string>
+    <string name="description_date_calendar">날짜 입력</string>
 </resources>
